// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`localeLink returns English link 1`] = `
Object {
  "ariaLabel": "header.langAriaLabel",
  "href": "https://www.healthcare.gov/",
  "label": "header.english",
}
`;

exports[`localeLink returns English link with custom switch link 1`] = `
Object {
  "ariaLabel": "header.langAriaLabel",
  "href": "https://localhelp.healthcare.gov",
  "label": "header.english",
}
`;

exports[`localeLink returns English link with subpath 1`] = `
Object {
  "ariaLabel": "header.langAriaLabel",
  "href": "https://www.healthcare.gov/tax-tool/",
  "label": "header.english",
}
`;

exports[`localeLink returns Spanish link 1`] = `
Object {
  "ariaLabel": "header.langAriaLabel",
  "href": "https://www.cuidadodesalud.gov/es/",
  "label": "header.español",
}
`;

exports[`localeLink returns Spanish link with custom switch link 1`] = `
Object {
  "ariaLabel": "header.langAriaLabel",
  "href": "https://ayudalocal.cuidadodesalud.gov/es",
  "label": "header.español",
}
`;

exports[`localeLink returns Spanish link with subpath 1`] = `
Object {
  "ariaLabel": "header.langAriaLabel",
  "href": "https://www.cuidadodesalud.gov/es/tax-tool/",
  "label": "header.español",
}
`;
